# ROS-Package-CPP-Template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeList.txt  CMakeLists.txt  README.md  package.xml
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{ cookiecutter.project_slug }}.h  {{ cookiecutter.project_slug }}_ros.h
{{cookiecutter.project_slug}}/src/: {{ cookiecutter.project_slug }}.cpp  {{ cookiecutter.project_slug }}_ros.cpp  {{ cookiecutter.project_slug }}_ros_node.cpp
{{cookiecutter.project_slug}}/test/: test_{{ cookiecutter.project_slug }}.cpp  test_{{ cookiecutter.project_slug }}.launch
