<?xml version="1.0"?>
<package format="2">
  <name>{{ cookiecutter.project_slug }}</name>
  <version>{{ cookiecutter.version }}</version>
  <description>{{ cookiecutter.description }}</description>

  <maintainer email="{{ cookiecutter.email }}">{{ cookiecutter.author_name }}</maintainer>

  <license>{{ cookiecutter.license }}</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>
</package>
